validacion detalle