@@ -111,13 +111,17 @@ public class DetalleMovieFragment extends Fragment implements MovieTrailerView {
     }
 
     public void setDetailMovie(Result detailMovie){
-        if(detailMovie!=null){
-            Float v_valoracion = Float.valueOf(detailMovie.getVoteAverage().toString());
-            if(v_valoracion > 0){
-                v_valoracion = v_valoracion /2;
-            }else{
-                v_valoracion = Float.valueOf(0);
+        if(detailMovie!=null ){
+            Float v_valoracion = new Float("0.0");
+            if(detailMovie.getVoteAverage()!=null){
+                 v_valoracion = Float.valueOf(detailMovie.getVoteAverage().toString());
+                if(v_valoracion > 0){
+                    v_valoracion = v_valoracion /2;
+                }else{
+                    v_valoracion = Float.valueOf(0);
+                }
             }
+
 
             detailMovieSelection = detailMovie;
             collapsingToolbarLayout.setTitle(detailMovie.getTitle());
